--- a/appClinics/templates/cashier/bill.html
+++ b/appClinics/templates/cashier/bill.html
@@ -22,17 +22,17 @@
         <div class="col-sm-6 p-3 ">
             <span>Tên thu ngân/y tá: Nhung</span>
             <br>
-            <span>Date: (Anh làm hiện ngày nha)</span>
+            <span>Date: 14/20/2022</span>
             <br>
 
-            <p>SĐT: SĐT Bệnh nhân</p>
+            <p>SĐT: 55155555</p>
         </div>
         <div class="col-sm-6 p-3 ">
-            <span>Loại bán: (Theo đơn/ mua lẽ)</span>
+            <span>Loại bán: Mua lẽ</span>
             <br>
-            <span>Mã toa thuốc: (anh lấy toa này từ bác sĩ)</span>
+            <span>Mã toa thuốc: #1515181</span>
             <br>
-            <span>Mã bhyt: (này anh cho none/ có điền ko có ko sao cái này tùy anh điều chỉnh nha)</span>
+            <span>Mã bhyt: </span>
             <br>
         </div>
     </div>
@@ -58,9 +58,9 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td>STT</td>
-                    <td>Doe</td>
-                    <td>john@example.com</td>
+                    <td>1</td>
+                    <td>Nguyễn Ngọc Luân</td>
+                    <td>Sáng 1 lần, Tối 1 lần</td>
                     <td>
                         <div class="form-group">
                             <label for="SL"></label>
@@ -76,8 +76,8 @@
                             </select>
                         </div>
                     </td>
-                    <td>Doe</td>
-                    <td>Doe</td>
+                    <td>100000</td>
+                    <td>500000</td>
                 </tr>
                 <tr>
 
@@ -108,18 +108,18 @@
             </div>
         </div>
         <div class="col-sm-6 p-3  text-right">
-            <span>Tổng cộng: VND</span>
+            <span>Tổng cộng: 500000 VND</span>
             <br>
             <span>Bảo hiểm: VND</span>
             <br>
-            <span>Tạm tính: VND</span>
+            <span>Tạm tính: 500000 VND</span>
             <br>
-            <span>Tổng tiền: VND</span>
+            <span>Tổng tiền: 500000 VND</span>
             <br>
             <div class="form-group">
                 <div class="row">
                     <div class="col-sm-6 mt-3 mb-3">
-                        <label for="VND">Tiền đưa:</label>
+                        <label for="VND">Tiền đưa: 500000</label>
                     </div>
                     <div class="form-floating col-sm-6 mt-3 mb-3">
                         <input type="text" class="form-control" id=VND placeholder="VND" required>
@@ -127,7 +127,7 @@
                     </div>
                 </div>
             </div>
-            <span>Tiền thừa: VND</span>
+            <span>Tiền thừa: 000 VND</span>
         </div>
     </div>
 </div>
