--- a/appClinics/templates/index.html
+++ b/appClinics/templates/index.html
@@ -11,16 +11,21 @@
             <div class="container-fluid ">
                 <h3 class="centerr">TIN TỨC MỚI</h3>
                     <div class="container p-3 my-3 border">
+                        <a class="thumbnail">
                         <img class="imgRow"
                              src="https://xdcs.cdnchinhphu.vn/thumb_w/900/446259493575335936/2022/9/8/covid-19-16626080762101926255717-28-0-1028-1600-crop-16626086747651911446297.jpg">
-                        <e class ="font-e">Tình hình dịch covid ngày gia tăng khiến cho các bệnh viện tuyến tỉnh đến trung ương ngày cảng
+                        </a>
+                            <e class ="font-e">Tình hình dịch covid ngày gia tăng khiến cho các bệnh viện tuyến tỉnh đến trung ương ngày cảng
                             quá tải</e>
                     </div>
                 <div class="container p-3 my-3 border">
+                    <a class="thumbnail">
                     <img class="imgRow"
                          src="https://xdcs.cdnchinhphu.vn/thumb_w/900/446259493575335936/2022/9/8/covid-19-16626080762101926255717-28-0-1028-1600-crop-16626086747651911446297.jpg">
-                    <e class ="font-e">Tình hình dịch covid ngày gia tăng khiến cho các bệnh viện tuyến tỉnh đến trung ương ngày cảng
+                   </a>
+                        <e class ="font-e">Tình hình dịch covid ngày gia tăng khiến cho các bệnh viện tuyến tỉnh đến trung ương ngày cảng
                         quá tải</e>
+
                 </div>
             </div>
         </div>
